--- a/src/components/SavedStrumPattern.css
+++ b/src/components/SavedStrumPattern.css
@@ -1,6 +1,5 @@
 .saved-strumming-pattern-container {
     display: inline-block;
-    margin: auto;
     border-style: solid;
     border-width: thin;
     border-color: rgba(0, 0, 0, 0.2);
